[gd_scene load_steps=11 format=3 uid="uid://b17n1hve7hxy0"]

[ext_resource type="Script" path="res://Scripts/Areas/Act1/fakescroll.gd" id="1_qx7j2"]
[ext_resource type="VideoStream" path="res://Assets/Meta/GlitchEffect.ogv" id="2_ythjp"]
[ext_resource type="AudioStream" uid="uid://dpyvttinkgb24" path="res://Assets/Audio/GlitchSFX.mp3" id="3_tup4c"]

[sub_resource type="Animation" id="Animation_vymnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fty0i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vvtxo"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fv1tj"]
_data = {
"RESET": SubResource("Animation_vymnj"),
"fade_in": SubResource("Animation_fty0i"),
"fade_out": SubResource("Animation_vvtxo")
}

[sub_resource type="Animation" id="Animation_k5x2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}

[sub_resource type="Animation" id="Animation_yea10"]
resource_name = "scroll"
length = 16.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 16, 19.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(0, 145.675), Vector2(0, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foiy3"]
_data = {
"RESET": SubResource("Animation_k5x2c"),
"scroll": SubResource("Animation_yea10")
}

[node name="FakeEnding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx7j2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 521.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "And so, the heroes defeated the dragon, and saved the kingdom!

The King rewarded their efforts handsomely, and they were able to live 
out their lives in peace.
After an adventure, they were more than ready to lie down and relax!

Their long journey was finally over..."
horizontal_alignment = 1

[node name="THEEND" type="Label" parent="Text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 116.184
offset_right = 116.0
offset_bottom = 311.184
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -14
theme_override_font_sizes/font_size = 70
text = "THE
END"
horizontal_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fv1tj")
}

[node name="Fade" type="ColorRect" parent="Anim"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Scroll" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_foiy3")
}
autoplay = "scroll"

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Glitch" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -52.0
offset_top = -29.0
offset_right = 1228.0
offset_bottom = 691.0
stream = ExtResource("2_ythjp")
loop = true

[node name="GlitchTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Grey" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.27451, 0.27451, 0.309804)

[node name="GlitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tup4c")
volume_db = 10.0
pitch_scale = 0.4

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="Scroll" to="." method="_on_scroll_animation_finished"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_glitch_timer_timeout"]
[connection signal="finished" from="GlitchSFX" to="." method="_on_glitch_sfx_finished"]
